# linkedin-mcp-server

./: .env.example  AGENTS.md  CONTRIBUTING.md  Dockerfile  IDEAS.md  README.md  docker-compose.yml  manifest.json  mise.toml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: docker-hub.md
linkedin_mcp_server/: bootstrap.py  cli_main.py  dependencies.py  error_handler.py  exceptions.py  server.py
linkedin_mcp_server/config/: loaders.py  schema.py
linkedin_mcp_server/core/: browser.py
linkedin_mcp_server/scraping/: connection.py  extractor.py  link_metadata.py
linkedin_mcp_server/tools/: __init__.py  company.py  feed.py  job.py  messaging.py  network.py  person.py
linkedin_mcp_server/tui/: app.py  cli.py  styles.tcss
linkedin_mcp_server/tui/screens/: conversation.py  inbox.py  login.py  main_menu.py
scripts/: _profile-extract.sh  _profile-source-archive.sh  _profile-transfer.sh
tests/: test_bootstrap.py  test_cli_main.py  test_config.py  test_dependencies.py  test_error_handler.py  test_link_metadata.py  test_scraping.py  test_tools.py
